Spacing for top artists, fixed url

--- a/styling.css
+++ b/styling.css
@@ -1,3 +1,4 @@
 .top_artist{
   padding: 3%;
+  display: inline-flex;
 }
